--- a/app/src/main/res/layout/activity_scan_qrcode.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode.xml
@@ -6,4 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".ScanQRCodeActivity">
 
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/view_focus_area"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/focus_area_shape"
+
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".6"
+        app:layout_constraintHeight_percent=".3"
+
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
